src/objects/Error__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funraise_Object_Id__c</fullName>
        <label>Funraise Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funraise_Object__c</fullName>
        <label>Funraise Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Supporter</fullName>
                </value>
                <value>
                    <fullName>Fundraising Event</fullName>
                </value>
                <value>
                    <fullName>Fundraising Event Registration</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Task/Interaction</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Question Answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Funraise Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funraise Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funraise Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>